feat: migrate references to the new API
Update ReferencesITest.
Fix WeaviateObject serialization.
Minor improvements ( default values for list/map parameters );